# glint

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  audit.toml  deny.toml  flake.nix  justfile
.config/: nextest.toml
.github/workflows/: ci.yml  e2e.yml
crates/e2e/src/: sidecar_handle.rs
crates/e2e/tests/: e2e.rs
crates/glint-analytics/: Cargo.toml
crates/glint-analytics/src/: batch_decoder.rs  entity_store.rs  lib.rs  main.rs  table_provider.rs
crates/glint-db-sidecar/src/: main.rs  rebuild.rs  routing.rs  sidecar.rs
crates/glint-e2e/src/: eth_node_handle.rs  sidecar_handle.rs
crates/glint-e2e/tests/: e2e.rs
crates/glint-engine/: Cargo.toml
crates/glint-engine/src/: executor.rs  lib.rs  processor.rs  recovery.rs  slot_counter.rs
crates/glint-exex/: Cargo.toml
crates/glint-exex/src/: arrow.rs  lib.rs  stream.rs
crates/glint-exex/tests/: integration.rs
crates/glint-historical/: Cargo.toml
crates/glint-historical/src/: provider.rs  schema.rs  writer.rs
crates/glint-historical/tests/: provider_integration.rs  roundtrip.rs
crates/glint-node/: Cargo.toml
crates/glint-node/src/: cli.rs  rpc.rs
crates/glint-node/tests/: smoke.rs
crates/glint-primitives/: Cargo.toml
crates/glint-primitives/src/: config.rs  constants.rs  entity.rs  error.rs  events.rs  exex_schema.rs  (+5 more)
crates/glint-sdk/: Cargo.toml
crates/mote-engine/: Cargo.toml
crates/mote-exex/: Cargo.toml
crates/mote-node/: Cargo.toml
crates/mote-node/src/: cli.rs  genesis.rs  lib.rs  main.rs  recovery.rs
crates/mote-node/tests/: smoke.rs
crates/mote-primitives/: Cargo.toml
docker/: Dockerfile.sidecar
docs/: arkiv-comparison.md
e2e/tests/: e2e.rs
etc/: genesis.json
(+39 files in other folders)
